--- a/assets/package.json
+++ b/assets/package.json
@@ -3,6 +3,13 @@
     "laravel-mix": "^6.0.11",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.7",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
+  },
+  "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "vue": "^2.6.12"
   }
 }
