(slow) storing and indexing

--- a/etc/es6/rec_mapping.json
+++ b/etc/es6/rec_mapping.json
@@ -47,48 +47,51 @@
                     "copy_to": "ac"
                 },
                 "metadata": {
-                    "author": {
-                        "properties": {
-                            "name": {
-                                "type": "text"
+                    "type": "object",
+                    "properties": {
+                        "author": {
+                            "properties": {
+                                "name": {
+                                    "type": "text"
+                                }
                             }
-                        }
-                    },
-                    "abstract": {
-                        "properties": {
-                            "lang": {
-                                "type": "keyword"
-                            },
-                            "text": {
-                                "type": "text"
+                        },
+                        "abstract": {
+                            "properties": {
+                                "lang": {
+                                    "type": "keyword"
+                                },
+                                "text": {
+                                    "type": "text"
+                                }
                             }
-                        }
-                    },
-                    "edition": {
-                        "enabled": "false"
-                    },
-                    "publisher": {
-                        "type": "text"
-                    },
-                    "placeOfPublication": {
-                        "type": "text"
-                    },
-                    "publicationDate": {
-                        "type": "text"
-                    },
-                    "doi": {
-                        "type": "keyword"
-                    },
-                    "isbn": {
-                        "type": "keyword"
-                    },
-                    "note": {
-                        "properties": {
-                            "lang": {
-                                "type": "keyword"
-                            },
-                            "text": {
-                                "type": "text"
+                        },
+                        "edition": {
+                            "enabled": "false"
+                        },
+                        "publisher": {
+                            "type": "text"
+                        },
+                        "placeOfPublication": {
+                            "type": "text"
+                        },
+                        "publicationDate": {
+                            "type": "text"
+                        },
+                        "doi": {
+                            "type": "keyword"
+                        },
+                        "isbn": {
+                            "type": "keyword"
+                        },
+                        "note": {
+                            "properties": {
+                                "lang": {
+                                    "type": "keyword"
+                                },
+                                "text": {
+                                    "type": "text"
+                                }
                             }
                         }
                     }
