--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dependencies": {
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
-        "vue": "^2.6.12"
+        "leaflet": "^1.7.1",
+        "leaflet-iiif": "^3.0.0",
+        "vue": "^2.6.12",
+        "vue2-leaflet": "^2.6.0"
     }
 }
