--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "postinstall": "npx mix --mix-config themes/opale/webpack.mix.js"
     },
     "devDependencies": {
+        "font-awesome": "^4.7.0",
         "laravel-mix": "^6.0.11",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.7",
