--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "devDependencies": {
         "font-awesome": "^4.7.0",
         "laravel-mix": "^6.0.11",
+        "modularscale-sass": "^3.0.10",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.7",
         "sass-loader": "^8.0.2",
