--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "private": true,
     "scripts": {
-        "postinstall": "npx mix --mix-config themes/ugent/webpack.mix.js"
+        "postinstall": "npx mix --mix-config themes/ugent/webpack.mix.js",
+        "dev": "npx nodemon"
     },
     "devDependencies": {
         "font-awesome": "^4.7.0",
         "laravel-mix": "^6.0.11",
         "modularscale-sass": "^3.0.10",
+        "nodemon": "^2.0.7",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.7",
         "sass-loader": "^8.0.2",
@@ -20,5 +22,16 @@
         "leaflet-iiif": "^3.0.0",
         "vue": "^2.6.12",
         "vue2-leaflet": "^2.6.0"
+    },
+    "nodemonConfig": {
+        "exec": "go run cmd/momo/main.go server start",
+        "signal": "SIGTERM",
+        "ext": "go,gohtml,json,po",
+        "watch": [
+            "cmd",
+            "etc",
+            "internal",
+            "themes/*/templates"
+        ]
     }
 }
