add timestamps to es schema (resolves #24)

--- a/etc/es6/rec_mapping.json
+++ b/etc/es6/rec_mapping.json
@@ -41,6 +41,12 @@
                 "type": {
                     "type": "keyword"
                 },
+                "created_at": {
+                    "type": "date"
+                },
+                "updated_at": {
+                    "type": "date"
+                },
                 "metadata": {
                     "type": "object",
                     "properties": {
