--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
         "leaflet": "^1.7.1",
         "leaflet-iiif": "^3.0.0",
         "vue": "^2.6.12",
-        "vue2-leaflet": "^2.6.0"
+        "vue2-leaflet": "^2.6.0",
+        "vuex": "^3.6.2"
     },
     "nodemonConfig": {
         "exec": "go run cmd/momo/main.go server start || exit 1",
