author highlight (resolves #46)

--- a/etc/es6/rec_mapping.json
+++ b/etc/es6/rec_mapping.json
@@ -63,7 +63,14 @@
                         "author": {
                             "properties": {
                                 "name": {
-                                    "type": "text"
+                                    "type": "text",
+                                    "fields": {
+                                        "ngram": {
+                                            "type": "text",
+                                            "analyzer": "ngram",
+                                            "search_analyzer": "lowercase"
+                                        }
+                                    }        
                                 }
                             }
                         },
