prefixed source_id;source_id upsert

--- a/etc/es6/rec_mapping.json
+++ b/etc/es6/rec_mapping.json
@@ -41,6 +41,9 @@
                 "type": {
                     "type": "keyword"
                 },
+                "source_id": {
+                    "type": "keyword"
+                },
                 "createdAt": {
                     "type": "date"
                 },
