consistent json camelCase

--- a/etc/es6/rec_mapping.json
+++ b/etc/es6/rec_mapping.json
@@ -41,7 +41,7 @@
                 "type": {
                     "type": "keyword"
                 },
-                "source_id": {
+                "sourceID": {
                     "type": "keyword"
                 },
                 "createdAt": {
