Changed: Leafleat IIIF viewer based from a manifest.

--- a/static/orpheus/mix-manifest.json
+++ b/static/orpheus/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=799891adc73e52f40c30",
-    "/css/app.css": "/css/app.css?id=5421e406fe50d7dc39c1"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
