--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "eslint": "^7.22.0",
-        "eslint-config-standard": "^16.0.2",
+        "eslint-config-standard": "^10.2.1",
         "eslint-loader": "^4.0.2",
         "eslint-plugin-standard": "^5.0.0",
         "eslint-plugin-vue": "^7.8.0",
@@ -28,6 +28,7 @@
         "bootstrap-vue": "^2.21.2",
         "leaflet": "^1.7.1",
         "leaflet-iiif": "^3.0.0",
+        "openseadragon": "^2.4.2",
         "vue": "^2.6.12",
         "vue2-leaflet": "^2.6.0",
         "vuex": "^3.6.2"
