expose Collection var to templates;show iiif viewer in ugent theme

--- a/static/ugent/mix-manifest.json
+++ b/static/ugent/mix-manifest.json
@@ -1,30 +1,30 @@
 {
-    "/js/app.js": "/js/app.js?id=a11b7b6c5dcd2b63dd15",
-    "/css/screen.css": "/css/screen.css?id=2300303878f8c71d3274",
-    "/images/illustration-errorpage.png": "/images/illustration-errorpage.png?id=5035a947c299ef30def6",
-    "/images/logo-ugent-nl.svg": "/images/logo-ugent-nl.svg?id=6e7f2021f3f25b58e032",
-    "/images/logo_bw_en.svg": "/images/logo_bw_en.svg?id=9f8713c7afccb5d72a7a",
-    "/images/logo_bw_nl.svg": "/images/logo_bw_nl.svg?id=a9b7000cd578f63e5eda",
-    "/images/logo_di_en.svg": "/images/logo_di_en.svg?id=4f97890c02f523a1dbec",
-    "/images/logo_di_nl.svg": "/images/logo_di_nl.svg?id=48b7c41eb53a8e283862",
-    "/images/logo_ea_en.svg": "/images/logo_ea_en.svg?id=27f99b888c3563e61825",
-    "/images/logo_ea_nl.svg": "/images/logo_ea_nl.svg?id=4940dc5dc79d4a107035",
-    "/images/logo_eb_en.svg": "/images/logo_eb_en.svg?id=fb4cd09d39e43c202d9b",
-    "/images/logo_eb_nl.svg": "/images/logo_eb_nl.svg?id=72c05045f84111027850",
-    "/images/logo_fw_en.svg": "/images/logo_fw_en.svg?id=0754237a42122af64490",
-    "/images/logo_fw_nl.svg": "/images/logo_fw_nl.svg?id=7a337f0659bb235659fa",
-    "/images/logo_ge_en.svg": "/images/logo_ge_en.svg?id=cea140ebe215c71dd9b3",
-    "/images/logo_ge_nl.svg": "/images/logo_ge_nl.svg?id=601c3a68acea97076423",
-    "/images/logo_lw_en.svg": "/images/logo_lw_en.svg?id=db653e9d20fa352dc217",
-    "/images/logo_lw_nl.svg": "/images/logo_lw_nl.svg?id=5625d060ecea80d4f37a",
-    "/images/logo_pp_en.svg": "/images/logo_pp_en.svg?id=0cdac2513d0f42aaa3fc",
-    "/images/logo_pp_nl.svg": "/images/logo_pp_nl.svg?id=6f4313d0c1a330aafe98",
-    "/images/logo_ps_en.svg": "/images/logo_ps_en.svg?id=8b6f966526a7eb6326c5",
-    "/images/logo_ps_nl.svg": "/images/logo_ps_nl.svg?id=5e257c06b9c0ad0e1ba8",
-    "/images/logo_re_en.svg": "/images/logo_re_en.svg?id=038562ce756f89051903",
-    "/images/logo_re_nl.svg": "/images/logo_re_nl.svg?id=225975493c34ab2a8a13",
-    "/images/logo_ugent_en.svg": "/images/logo_ugent_en.svg?id=2f6f051f36cdf520ed01",
-    "/images/logo_ugent_nl.svg": "/images/logo_ugent_nl.svg?id=6dc343fc9ca5edcf0645",
-    "/images/logo_we_en.svg": "/images/logo_we_en.svg?id=692dc12d7c8b9e932f45",
-    "/images/logo_we_nl.svg": "/images/logo_we_nl.svg?id=19d21aa086d759a037f6"
+    "/js/app.js": "/js/app.js",
+    "/css/screen.css": "/css/screen.css",
+    "/images/illustration-errorpage.png": "/images/illustration-errorpage.png",
+    "/images/logo-ugent-nl.svg": "/images/logo-ugent-nl.svg",
+    "/images/logo_bw_en.svg": "/images/logo_bw_en.svg",
+    "/images/logo_bw_nl.svg": "/images/logo_bw_nl.svg",
+    "/images/logo_di_en.svg": "/images/logo_di_en.svg",
+    "/images/logo_di_nl.svg": "/images/logo_di_nl.svg",
+    "/images/logo_ea_en.svg": "/images/logo_ea_en.svg",
+    "/images/logo_ea_nl.svg": "/images/logo_ea_nl.svg",
+    "/images/logo_eb_en.svg": "/images/logo_eb_en.svg",
+    "/images/logo_eb_nl.svg": "/images/logo_eb_nl.svg",
+    "/images/logo_fw_en.svg": "/images/logo_fw_en.svg",
+    "/images/logo_fw_nl.svg": "/images/logo_fw_nl.svg",
+    "/images/logo_ge_en.svg": "/images/logo_ge_en.svg",
+    "/images/logo_ge_nl.svg": "/images/logo_ge_nl.svg",
+    "/images/logo_lw_en.svg": "/images/logo_lw_en.svg",
+    "/images/logo_lw_nl.svg": "/images/logo_lw_nl.svg",
+    "/images/logo_pp_en.svg": "/images/logo_pp_en.svg",
+    "/images/logo_pp_nl.svg": "/images/logo_pp_nl.svg",
+    "/images/logo_ps_en.svg": "/images/logo_ps_en.svg",
+    "/images/logo_ps_nl.svg": "/images/logo_ps_nl.svg",
+    "/images/logo_re_en.svg": "/images/logo_re_en.svg",
+    "/images/logo_re_nl.svg": "/images/logo_re_nl.svg",
+    "/images/logo_ugent_en.svg": "/images/logo_ugent_en.svg",
+    "/images/logo_ugent_nl.svg": "/images/logo_ugent_nl.svg",
+    "/images/logo_we_en.svg": "/images/logo_we_en.svg",
+    "/images/logo_we_nl.svg": "/images/logo_we_nl.svg"
 }
