--- a/static/orpheus/mix-manifest.json
+++ b/static/orpheus/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=39c9b04cbb56b06c6a7f",
+    "/css/app.css": "/css/app.css?id=5421e406fe50d7dc39c1"
 }
